Fix save action on windows platform (due to deprecated File.toURL use wich didn' escape ':' character)